tests/baselines/reference/objectTypeHidingMembersOfObjectAssignmentCompat.errors.txt
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat.ts(7,1): error TS2322: Type 'I' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 无值' is not assignable to type '() => 文字'.
      Type '无值' is not assignable to type '文字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat.ts(14,1): error TS2322: Type 'C' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 无值' is not assignable to type '() => 文字'.
      Type '无值' is not assignable to type '文字'.
tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat.ts(20,1): error TS2322: Type '{ toString: () => 无值; }' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '() => 无值' is not assignable to type '() => 文字'.
      Type '无值' is not assignable to type '文字'.


==== tests/cases/conformance/types/members/objectTypeHidingMembersOfObjectAssignmentCompat.ts (3 errors) ====
    interface I {
        toString(): void;
    }
    
    var i: I;
    var o: Object;
    o = i; // error
    ~
!!! error TS2322: Type 'I' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 无值' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '无值' is not assignable to type '文字'.
    i = o; // ok
    
    class C {
        toString(): void { }
    }
    var c: C;
    o = c; // error
    ~
!!! error TS2322: Type 'C' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 无值' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '无值' is not assignable to type '文字'.
    c = o; // ok
    
    var a = {
        toString: () => { }
    }
    o = a; // error
    ~
!!! error TS2322: Type '{ toString: () => 无值; }' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '() => 无值' is not assignable to type '() => 文字'.
!!! error TS2322:       Type '无值' is not assignable to type '文字'.
    a = o; // ok